[gd_scene load_steps=23 format=2]

[ext_resource path="res://Backgrounds/corredor default png (1).png" type="Texture" id=1]
[ext_resource path="res://Mike.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cena3.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Porta_abrindo.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Hallway_Ambience.mp3" type="AudioStream" id=5]
[ext_resource path="res://gang_animacao/quadro0000.png" type="Texture" id=6]
[ext_resource path="res://gang_animacao/quadro leia 0001.png" type="Texture" id=7]
[ext_resource path="res://gang_animacao/frame default 0002.png" type="Texture" id=8]
[ext_resource path="res://gang_animacao/quadro0001.png" type="Texture" id=9]
[ext_resource path="res://gang_animacao/frame default 0000.png" type="Texture" id=10]
[ext_resource path="res://gang_animacao/quadro leia 0000.png" type="Texture" id=11]
[ext_resource path="res://gang_animacao/frame default 0001.png" type="Texture" id=12]
[ext_resource path="res://gang_animacao/quadro0002.png" type="Texture" id=13]
[ext_resource path="res://gang_animacao/quadro leia 0002.png" type="Texture" id=14]
[ext_resource path="res://Fonts/Square.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Sounds/papel.mp3" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "frente",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 13 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 42
outline_color = Color( 0.0156863, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 15 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 11 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.111, 301 )
scale = Vector2( 0.268171, 0.27963 )
texture = ExtResource( 1 )

[node name="Porta" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.083
anchor_right = 0.083
margin_left = 79.0
margin_top = 187.0
margin_right = 244.0
margin_bottom = 491.0
rect_pivot_offset = Vector2( 84, 135 )
mouse_default_cursor_shape = 2

[node name="porta_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -3.05176e-05 )
scale = Vector2( 0.268171, 0.27963 )
stream = ExtResource( 4 )

[node name="corredor_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -12.244

[node name="botao_lixo" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 505.0
margin_top = 368.0
margin_right = 572.0
margin_bottom = 515.0
mouse_default_cursor_shape = 2

[node name="somLixo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="def" type="AnimatedSprite" parent="."]
position = Vector2( 836, 404 )
scale = Vector2( 0.271942, 0.271941 )
frames = SubResource( 2 )
animation = "frente"

[node name="leoa" type="AnimatedSprite" parent="."]
position = Vector2( 954.625, 390.684 )
scale = Vector2( 0.317871, 0.317871 )
frames = SubResource( 1 )
animation = "frente"

[node name="pantera" type="AnimatedSprite" parent="."]
position = Vector2( 699.906, 368.661 )
scale = Vector2( 0.18114, 0.18114 )
frames = SubResource( 3 )
animation = "frente"

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 87, 429 )

[node name="purr_botao" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 617.0
margin_top = 181.0
margin_right = 1006.0
margin_bottom = 553.0
mouse_default_cursor_shape = 2

[node name="Popup_Menu" type="Control" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 617.0
margin_top = 181.0
margin_right = 617.0
margin_bottom = 181.0

[node name="ColorRect" type="ColorRect" parent="Popup_Menu"]
margin_left = -619.0
margin_top = -181.0
margin_right = 413.0
margin_bottom = 424.0
color = Color( 0, 0, 0, 0.854902 )

[node name="Main_Menu" type="Label" parent="Popup_Menu"]
margin_left = -249.0
margin_top = 27.0
margin_right = 36.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 12 )
text = "jogo pausado"

[node name="Menu" type="Button" parent="Popup_Menu"]
margin_left = -185.0
margin_top = 115.0
margin_right = -17.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 128, 20 )
mouse_default_cursor_shape = 2
theme = SubResource( 13 )
text = "Continuar"

[node name="Menu2" type="Button" parent="Popup_Menu"]
margin_left = -185.0
margin_top = 179.0
margin_right = -17.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 128, 20 )
mouse_default_cursor_shape = 2
theme = SubResource( 13 )
text = "Sair do jogo"

[connection signal="pressed" from="Porta" to="." method="_on_Porta_pressed"]
[connection signal="pressed" from="botao_lixo" to="." method="_on_botao_lixo_pressed"]
[connection signal="pressed" from="purr_botao" to="." method="_on_purr_botao_pressed"]
[connection signal="pressed" from="Popup_Menu/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Popup_Menu/Menu2" to="." method="_on_Menu2_pressed"]
